<resources>
    <string name="app_name">Penguin Pay</string>
    <string name="phone_label">Please inform the recipient telephone number</string>
    <string name="phone_prefix">Country Code</string>
    <string name="amount_input_label">Now enter the amount you want to transfer:</string>
    <string name="button_label_one">1</string>
    <string name="button_label_zero">0</string>
    <string name="exchanged_amount_label">Amount to be received by the Recipient in %s currency:</string>
    <string name="exchanged_amount_value">$ %s</string>
    <string name="title_activity_money_transfer">MoneyTransferActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="missing_field_warning">It looks like you didn\'t provide the necessary info to send money to someone else.</string>
    <string name="sending_money">We are tranfering %s to the owner of phone %s</string>
    <string name="money_transfer_succeed">YAAAY!! You Successfuly transfered your Money to someone else :)</string>
    <string name="money_transfer_failed">OH NO!! Something unexpected happened and we couldn\'t tranfer your Money. Try again later</string>
</resources>